changed the layout structure and cleaned up the code

--- a/bulma_boiler_react/src/css/mystyles.css
+++ b/bulma_boiler_react/src/css/mystyles.css
@@ -10949,7 +10949,7 @@ a.has-text-danger-dark:hover, a.has-text-danger-dark:focus {
 .active {
   background-color: #209CEE !important; }
 
-.hero-body {
+.hero-body, .content-cards {
   background-color: #B4C6F0; }
 
 h1 {
